[OS/2] Bug 399647: fix OS/2 build break in prlog.c and correct warning, r=wtc