nsprpub/pr/include/md/_os2.h
@@ -394,14 +394,7 @@ extern PRInt32 _MD_Accept(PRFileDesc *fd, PRNetAddr *raddr, PRUint32 *rlen,
 #define _MD_FREE_LOCK(lock)           (DosCloseMutexSem((lock)->mutex))
 #define _MD_LOCK(lock)                (DosRequestMutexSem((lock)->mutex, SEM_INDEFINITE_WAIT))
 #define _MD_TEST_AND_LOCK(lock)       (DosRequestMutexSem((lock)->mutex, SEM_INDEFINITE_WAIT),0)
-#define _MD_UNLOCK(lock)              \
-    PR_BEGIN_MACRO \
-    if (0 != (lock)->notified.length) { \
-        md_UnlockAndPostNotifies((lock), NULL, NULL); \
-    } else { \
-        DosReleaseMutexSem((lock)->mutex); \
-    } \
-    PR_END_MACRO
+#define _MD_UNLOCK                    (_PR_MD_UNLOCK)
 #endif
 
 /* --- lock and cv waiting --- */
